--- a/estilo.css
+++ b/estilo.css
@@ -1,94 +1,148 @@
 /*Exemplo de estilo na tag principal*/
-body{
+body {
     background-color: azure;
     margin: 0;
-}
-
-#content{
-    padding: 0 30 0 30;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: x-small;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 /*Exemplo de estilo em tag específica*/
-header{
-    text-align: center;
+header {
+    display: flex;
+    justify-content: center;
+    padding: 0 50;
+    background-color: rgb(238, 220, 255);
+    font-family: monospace;
+    font-size: x-large;
+    color: blueviolet;
+    border-bottom: 1px solid blueviolet;
 }
 
+#content {
+    padding: 0 30 0 30;
+    font-size: x-small;
+    margin: 10 200;
+}
+
+
 /*Exemplo de estilo pelo ID*/
-#description{
-    border: 1px solid;
-    border-radius: 15px;
-    margin: 0 10 0 10; 
+#description {
+    display: flex;
+    margin: 0 10 0 10;
     padding: 10;
     text-align: justify;
-    background-color: rgb(180, 193, 206);
+    font-size: large;
+}
+
+.titulo {
+    color: blueviolet;
+    font-weight: 900;
+    font-size: xx-large;
+    margin-top: 40;
 
 }
 
+#cursos {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.card_curso {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    width: 400px;
+    border: 1px solid;
+    border-radius: 0 0 15px 15px;
+    margin-top: 10;
+    position: relative;
+}
+
+.card-link {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: -1;
+    width:100%;
+    border-radius: 0 0 15px 15px;
+}
+
+.card_curso .titulo {
+    font-size: x-large;
+}
+
+.card_texto {
+    margin-top: -30;
+    padding: 0 20 0 30;
+    background-color: rgb(239, 231, 246);
+    border-radius: 0 0 15px 15px;
+    border-top: 1px solid blueviolet;
+}
+
+.card_descricao {
+    font-size: medium;
+}
+
+.card_img {}
+
 /*Exemplo de estilo pelo ID*/
-#description li{
-    margin: 10 10 0 10; 
+#description li {
+    margin: 10 10 0 10;
     padding: 2;
     text-align: justify;
 }
 
-/*Estilo da tabela*/
-table{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: x-small;
-}
-
-table caption{
-    text-align: left;
-}
-
-table thead{
-    background-color: blueviolet;
-    color: white;
-}
-
-table .par{
-    background-color: rgb(205, 191, 218);
-}
-
-tbody td{
-    padding: 4;
-    text-align: center;
-}
-
 /* Estilo da div do forms */
-#formulario{
-    background-color: white;
-    border-radius: 15px;
-    border: 1px solid blueviolet;
+#formulario {
     padding: 10;
-    text-align: center;
-}
-
-#formulario p{
-    text-align: center;
-    font-weight: bolder;
 }
 
 /*Exemplo de estilo pelo class*/
-.linha_formulario{
-    padding: 5;
-    text-align: center;
+.linha_formulario {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 500px;
+    margin: 10 0 0 50;
 
 }
 
-input, select, textarea{
-    border-radius: 3px;
-    border-color: rgb(141, 42, 234);
+.form_label {
+    font-size: large;
+    font-weight: bold;
     color: blueviolet;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: x-small;
+
 }
 
-/*footer*/
-#footer{
-    border-top:1px solid blueviolet;
+input,
+select,
+textarea {
+    border-radius: 3px;
+    border-color: rgb(192, 141, 239);
+    height: 50px;
+    width: 300px;
+    outline: 0;
+}
+
+:focus {
+    border: 3px solid blueviolet;
+
+}
+
+:hover {
+    border: 3px solid blueviolet;
+
+}
+
+.form_button {
+    background-color: white;
+    height: 40px;
+    width: 100px;
+}
+
+#footer {
+    border-top: 1px solid blueviolet;
     background-color: white;
     margin: 20 0 0 0;
     text-align: center;
