--- a/CursosRestic/src/styles.css
+++ b/CursosRestic/src/styles.css
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    background-color: azure;
+    margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.titulo {
+    color: blueviolet;
+    font-weight: 900;
+    font-size: xx-large;
+}
+
+.titulo-normal{
+
+}
