Componentes painel e footer

--- a/CursosRestic/src/app/app.component.html
+++ b/CursosRestic/src/app/app.component.html
@@ -1,4 +1,12 @@
-<app-header></app-header>
-<section class="content">
-  <app-painel></app-painel>
-</section>
+<div id="layout">
+  <section class="header">
+    <app-header></app-header>
+  </section>
+  <section class="content">
+    <app-painel></app-painel>
+    <app-cursos></app-cursos>
+  </section>
+  <section class="footer">
+    <app-footer></app-footer>
+  </section>
+</div>
