--- a/CursosRestic/src/app/app.component.css
+++ b/CursosRestic/src/app/app.component.css
@@ -1,4 +1,18 @@
+#layout{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    
+}
+
 .content{
     display: flex;
+    flex-direction: column;
     margin: 0px 10% 0px 10%;
+
+}
+
+.footer{
+    text-align: center;
+    padding: 20px;
 }
