--- a/CursosRestic/src/styles.css
+++ b/CursosRestic/src/styles.css
@@ -2,7 +2,7 @@
 body{
     background-color: azure;
     margin: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;   
 }
 
 .titulo {
@@ -12,5 +12,5 @@ body{
 }
 
 .titulo-normal{
-
+    font-size: medium;
 }
