Interface, diretivas, interpolação, ngFor, dados

--- a/CursosRestic/src/app/app.component.html
+++ b/CursosRestic/src/app/app.component.html
@@ -3,8 +3,7 @@
     <app-header></app-header>
   </section>
   <section class="content">
-    <app-painel></app-painel>
-    <app-cursos></app-cursos>
+    <app-home></app-home>
   </section>
   <section class="footer">
     <app-footer></app-footer>
