Criação do componente details e criação da rota

--- a/CursosRestic/src/app/app.component.html
+++ b/CursosRestic/src/app/app.component.html
@@ -3,7 +3,7 @@
     <app-header></app-header>
   </section>
   <section class="content">
-    <app-home></app-home>
+    <router-outlet></router-outlet>
   </section>
   <section class="footer">
     <app-footer></app-footer>
